--- a/pages/about.html
+++ b/pages/about.html
@@ -1,3 +1,16 @@
-<p>
-    About
-</p>
+<div class="row">
+    <div class="col s12 m5 l5">
+        <h3>About</h3>
+    </div>
+
+    <div class="col s12 m7 l7">
+        <p class="main-description">
+            I’am a enthusiastic programmer and designer with with several months of experience. Specialising in
+            Front-end Developer
+            and UI/UX Designer.
+
+            Studying at Diploma of Software Engineering - Telkom University. Feel free to contact me in
+            <a href="mailto:daniszaidan@gmail.com">daniszaidan@gmail.com</a>
+        </p>
+    </div>
+</div>
