--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,3 +1,30 @@
-<p>
-    Contact
-</p>
+<div class="row">
+    <div class="col s12 m5 l5">
+        <h3>Contact</h3>
+    </div>
+
+    <div class="col s12 m7 l7">
+        <div class="social-media flex-center">
+            <a href="https://github.com/daniszaidan" target="blank">
+                <div class="social-media-icon">
+                    <i class="fab fa-github"></i>
+                </div>
+            </a>
+            <a href="https://www.linkedin.com/in/daniszaidan/" target="blank">
+                <div class="social-media-icon">
+                    <i class="fab fa-linkedin"></i>
+                </div>
+            </a>
+            <a href="https://www.instagram.com/daniszaidan/" target="blank">
+                <div class="social-media-icon">
+                    <i class="fab fa-instagram"></i>
+                </div>
+            </a>
+            <a href="mailto:daniszaidan@gmail.com" target="blank">
+                <div class="social-media-icon">
+                    <i class="fas fa-envelope"></i>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
