--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,12 @@
-<p>
-    Home
-</p>
+<div class="row">
+    <div class="col s12 m4 l4 flex-center">
+        <img class="photo-profile" src="images/danis.jpg" alt="image">
+    </div>
+
+    <div class="col s12 m8 l8">
+        <div class="intro">
+            <h3>Danis Zaidan</h3>
+            <p>Front-End Developer & UI Designer</p>
+        </div>
+    </div>
+</div>
