--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,3 +1,44 @@
-<p>
-    Portfolio
-</p>
+<div class="row">
+    <div class="col s12 m6 l4">
+        <div class="card">
+            <div class="card-image">
+                <img src="../images/zerolist.jpg">
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m6 l4">
+        <div class="card">
+            <div class="card-image">
+                <img src="../images/EndlessCode.jpg">
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m6 l4">
+        <div class="card">
+            <div class="card-image">
+                <img src="../images/altamusicc.jpg">
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m6 l4">
+        <div class="card">
+            <div class="card-image">
+                <img src="../images/ZeitPlan.jpg">
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m6 l4">
+        <div class="card">
+            <div class="card-image">
+                <img src="../images/zerocss.jpg">
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m6 l4">
+        <div class="card">
+            <div class="card-image">
+                <img src="../images/DisClass.jpg">
+            </div>
+        </div>
+    </div>
+</div>
