--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
     <title>Danis Zaidan</title>
+
     <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#00897B" />
-    <meta name="description" content="Danis Zaidan" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
     <link rel="stylesheet" href="css/materialize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Danis Zaidan" />
+    <meta name="theme-color" content="#6A94E2" />
+    <meta charset="UTF-8" />
 </head>
 
 <body>
 
     <!-- Navigasi -->
-    <nav class="teal lighten-1" role="navigation">
+    <nav class="bg-color" role="navigation">
         <div class="nav-wrapper container">
-            <a href="#" class="brand-logo" id="logo-container">My App</a>
+            <a href="#" class="brand-logo" id="logo-container">My Profile</a>
             <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
 
             <ul class="topnav right hide-on-med-and-down"></ul>
