change fontawesome with image

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,23 +6,23 @@
     <div class="col s12 m7 l7">
         <div class="social-media flex-center">
             <a href="https://github.com/daniszaidan" target="blank">
-                <div class="social-media-icon">
-                    <i class="fab fa-github"></i>
+                <div class="social-media-icon flex-center">
+                    <img src="../images/github.png" alt="github">
                 </div>
             </a>
             <a href="https://www.linkedin.com/in/daniszaidan/" target="blank">
-                <div class="social-media-icon">
-                    <i class="fab fa-linkedin"></i>
+                <div class="social-media-icon flex-center">
+                    <img src="../images/linkedin.png" alt="linkedin">
                 </div>
             </a>
             <a href="https://www.instagram.com/daniszaidan/" target="blank">
-                <div class="social-media-icon">
-                    <i class="fab fa-instagram"></i>
+                <div class="social-media-icon flex-center">
+                    <img src="../images/instagram.png" alt="instagram">
                 </div>
             </a>
             <a href="mailto:daniszaidan@gmail.com" target="blank">
-                <div class="social-media-icon">
-                    <i class="fas fa-envelope"></i>
+                <div class="social-media-icon flex-center">
+                    <img src="../images/email.png" alt="email">
                 </div>
             </a>
         </div>
